hphp/test/zend/good/Zend/tests/traits/error_011.php.expectf

Fatal error: Method 'test' declared in multiple traits (foo, c, b) in %s/error_011.php on line 14
